--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="VconnectIT.png" />
+    <link rel="icon" type="image/svg+xml" href="VconnectITfavicon.png" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <meta name="google-signin-client_id" content="1083524568408-bj8s8f3q50rrldhvdnrqhmrjsut5b80u.apps.googleusercontent.com">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VconnectIT</title>
   </head>
@@ -10,4 +12,5 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
+  <script src="https://apis.google.com/js/platform.js" async defer></script>
 </html>
